# auto-apt

./: .gitignore  Makefile  Makefile.am  auto-apt-pkgcdb.c  auto-apt.c  auto_apt.py  auto_apt_globals.py  configure.ac  main.c  setup.py
pkgcdb/: mempool.c  pathnode.c  pkgcdb2.c  strtab.c
tests/: Makefile.am  check_auto_apt.c
